# HuffmanEncoding

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  decoding.cc  encoding.c  huffman_encoding.c  huffman_encoding.h  list.c  list.h
c-encoder/: .clangd  encoding.c  huffman_encoding.c  huffman_encoding.h  list.c  list.h
cpp-decoder/: decoding.cc
resources/: bee-movie-bin.txt  bee-movie.txt.copy
rust-decoder/: Cargo.toml
rust-decoder/src/: main.rs
